<resources>
    <string name="app_name">HousingApp</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="you_havent_saved_anything_yet">You haven\'t saved anything yet</string>
    <string name="explore">Explore</string>
    <string name="try_again">Try again</string>
    <string name="saved">Saved</string>
    <string name="deleted">Deleted</string>
    <string name="error_while_getting_categories">Error while getting categories</string>
    <string name="downloading">Downloading</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_to_continue">login to continue</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in_uppercase">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register_to_continue">register to continue</string>
    <string name="confirm_password">confirm password</string>
    <string name="create_new_account_lowercase">create new account</string>
    <string name="sign_up_uppercase">SIGN UP</string>
    <string name="sign_in_lowercase">sign in</string>
    <string name="passwords_are_not_equal">Passwords are not equal</string>
    <string name="the_password_must_contain_at_least">The password must contain at least 1 uppercase letter, 1 lowercase letter, 1 digit, and be longer than 5 characters.</string>
    <string name="failed_to_create_an_account">Failed to create an account. Please try again later</string>
    <string name="failed_to_sign_in_to_the_account">Failed to log in to the account Please try again later</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="short_description">short description</string>
    <string name="long_description">long description</string>
    <string name="telephone_number">telephone number</string>
    <string name="price">price</string>
    <string name="image_link">image link</string>
    <string name="confirm">CONFIRM</string>
    <string name="some_value_is_empty">some value is empty</string>
    <string name="successful">successful</string>
    <string name="phone_number_header">Phone number:</string>
</resources>