<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:clipToPadding="false"
    android:padding="@dimen/dp16">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/dp40"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etShortDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sdp40"
                android:background="@drawable/shape_rectangle_edittext"
                android:hint="@string/short_description"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="@dimen/sdp16"
                android:textSize="@dimen/ssp14" />

            <EditText
                android:id="@+id/etLongDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sdp40"
                android:layout_marginTop="@dimen/sdp8"
                android:background="@drawable/shape_rectangle_edittext"
                android:hint="@string/long_description"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="@dimen/sdp16"
                android:textSize="@dimen/ssp14" />

            <EditText
                android:id="@+id/etTelephoneNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sdp40"
                android:layout_marginTop="@dimen/sdp8"
                android:background="@drawable/shape_rectangle_edittext"
                android:hint="@string/telephone_number"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingHorizontal="@dimen/sdp16"
                android:textSize="@dimen/ssp14" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sdp40"
                android:layout_marginTop="@dimen/sdp8"
                android:background="@drawable/shape_rectangle_edittext"
                android:hint="@string/price"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingHorizontal="@dimen/sdp16"
                android:textSize="@dimen/ssp14" />

            <EditText
                android:id="@+id/etImageLink"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sdp40"
                android:layout_marginTop="@dimen/sdp8"
                android:background="@drawable/shape_rectangle_edittext"
                android:hint="@string/image_link"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/sdp16"
                android:textSize="@dimen/ssp14" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvConfirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sdp40"
                android:layout_marginVertical="@dimen/sdp8"
                app:cardBackgroundColor="@color/green_blue"
                app:cardCornerRadius="@dimen/dp16">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/mulish_700"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp4"
                    android:text="@string/confirm"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="@dimen/sp26" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp16"
        app:cardBackgroundColor="?attr/colorSurfaceContainer"
        app:cardCornerRadius="@dimen/dp16"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_home_inactive" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_add_note_active" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>